[project]
name = "cryptodataanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "yfinance>=0.2.66",
]
